Fixed a bug that prevents the body from wrapping its contents.

--- a/style-student.css
+++ b/style-student.css
@@ -8,6 +8,7 @@
     height:675px;
     width: 100%;
     flex-direction: row;
+  height: auto;
     
    
     
